# toyoko-mcp

./: .env_example  .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  README.md  compose.yaml  justfile  pyproject.toml
src/toyoko_mcp/: __init__.py  cli.py  core.py
tests/: test_cli.py
tests/pages/: login.html  reserve.html  search.html  top.html
